# sonarcloud-test

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: main.yml
sonarcloud_test/: jupyter.ipynb  pythoncode.py  travel-insurance.csv
